; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_if_clone_softc_allocate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_if_clone_softc_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.if_clone = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @if_clone_softc_allocate(%struct.if_clone* %0) #0 {
  %2 = alloca %struct.if_clone*, align 8
  %3 = alloca i8*, align 8
  store %struct.if_clone* %0, %struct.if_clone** %2, align 8
  store i8* null, i8** %3, align 8
  %4 = load %struct.if_clone*, %struct.if_clone** %2, align 8
  %5 = icmp ne %struct.if_clone* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @VERIFY(i32 %6)
  %8 = load %struct.if_clone*, %struct.if_clone** %2, align 8
  %9 = getelementptr inbounds %struct.if_clone, %struct.if_clone* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i8* @zalloc(i32 %10)
  store i8* %11, i8** %3, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load i8*, i8** %3, align 8
  %16 = load %struct.if_clone*, %struct.if_clone** %2, align 8
  %17 = getelementptr inbounds %struct.if_clone, %struct.if_clone* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @bzero(i8* %15, i32 %18)
  br label %20

20:                                               ; preds = %14, %1
  %21 = load i8*, i8** %3, align 8
  ret i8* %21
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i8* @zalloc(i32) #1

declare dso_local i32 @bzero(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
